[package]
name = "oxgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
overflow-checks = false
debug-assertions = false